kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app.kubernetes.io/instance: dbpedia
  name: dbpedia-ingress
  namespace: dbpedia
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dbpedia.example.com
    secretName: dbpedia-tls
  rules:
  - host: dbpedia.example.com
    http:
      paths:
      - backend:
          service:
            name: dbpedia-spotlight-en
            port:
              number: 2222
        path: /en(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: dbpedia-spotlight-de
            port:
              number: 2222
        path: /de(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: dbpedia-spotlight-ca
            port:
              number: 2222
        path: /ca(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: dbpedia-spotlight-da
            port:
              number: 2222
        path: /da(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: dbpedia-spotlight-nl
            port:
              number: 2222
        path: /nl(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: dbpedia-spotlight-fi
            port:
              number: 2222
        path: /fi(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: dbpedia-spotlight-hu
            port:
              number: 2222
        path: /hu(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: dbpedia-spotlight-it
            port:
              number: 2222
        path: /it(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: dbpedia-spotlight-no
            port:
              number: 2222
        path: /no(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: dbpedia-spotlight-pt
            port:
              number: 2222
        path: /pt(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: dbpedia-spotlight-ro
            port:
              number: 2222
        path: /ro(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: dbpedia-spotlight-ru
            port:
              number: 2222
        path: /ru(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: dbpedia-spotlight-es
            port:
              number: 2222
        path: /es(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: dbpedia-spotlight-sv
            port:
              number: 2222
        path: /sv(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: dbpedia-spotlight-tr
            port:
              number: 2222
        path: /tr(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: dbpedia-spotlight-fr
            port:
              number: 2222
        path: /fr(/|$)(.*)
        pathType: Prefix
